[#104] Remove unnecessary files and reorganize